# barterm

./: .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  NOTIFICATION_BEHAVIOR.md  PLAN.md  README.md  about.html  create-badge-icon.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/skills/commit/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION.md  KEYBOARD_SHORTCUTS.md  NOTIFICATION_BEHAVIOR.md  README.md  SETTINGS.md  TROUBLESHOOTING.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Settings.tsx  TabBar.tsx  Terminal.tsx  TerminalManager.tsx  TerminalTab.tsx  UpdateBadge.tsx
src/contexts/: SettingsContext.tsx
src/hooks/: usePty.ts
src/lib/: theme.ts
