[package]
name = "barterm"
version = "0.1.0"
description = "macOS menubar terminal app"
authors = ["you"]
edition = "2021"

[lib]
name = "barterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-pty = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
